--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: larger;
-    border: thin solid red;
+    /* border: thin solid greenyellow; */
 }
 
 body{
@@ -14,12 +14,21 @@ body{
     height: 100vh;
     padding: 10px;
 }
+.user-grid{
+    display: flex;
+    margin-bottom: 10px;
+}
+.user-grid input{
+    flex: 1;
+}
+.user-grid button{
+    padding: 5px;
+}
 .container{
     display: flex;
     flex-direction: column;
     flex:1;
     padding: 10px;
-    gap: 10px;
     background-color: white;
     border: medium solid black;
 
@@ -27,15 +36,14 @@ body{
 .row{
     display: flex;
     flex:1;
-    gap: 5px;
-    padding: 5px;
 }
 .box{
-    background-color: black;
+    background-color: grey;
     color: white;
     flex: 1;
     transition: ease 0.3s all;
 }
-.box:hover{
+
+.marked{
     background-color: rgb(150, 6, 239);
 }
