--- a/styles.css
+++ b/styles.css
@@ -3,34 +3,55 @@
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: larger;
     /* border: thin solid greenyellow; */
 }
 
 body{
     display: flex;
-    background-color: lightgray;
+    background-color: rgb(0, 0, 0);
     flex-direction: column;
     height: 100vh;
     padding: 10px;
+    
+}
+.options{
+    border: medium solid black;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color:  rgba(17, 1, 28, 0.8);
+    color: white;
+    box-shadow: -5px 10px 8px rgb(42, 33, 33);
+}
+.options div{
+    padding: 10px;
+}
+.options h2{
+    text-align: center;
 }
 .user-grid{
     display: flex;
     margin-bottom: 10px;
+    gap: 10px;
 }
 .user-grid input{
     flex: 1;
 }
 .user-grid button{
-    padding: 5px;
+    padding: 10px;
+    background-color: blueviolet;
+    color: white;
+    font-weight: bolder;
+    font-size: medium;
+    width: 10%;
 }
 .container{
     display: flex;
     flex-direction: column;
     flex:1;
-    padding: 10px;
-    background-color: white;
-    border: medium solid black;
+    box-shadow: -5px 10px 8px rgb(42, 33, 33);
+    /* padding: 10px; */
+    /* background-color: white; */
+    /* border: medium solid black; */
 
 }
 .row{
@@ -38,12 +59,22 @@ body{
     flex:1;
 }
 .box{
-    background-color: grey;
-    color: white;
+    background-color: rgba(17, 1, 28, 0.8);
     flex: 1;
     transition: ease 0.3s all;
 }
 
 .marked{
     background-color: rgb(150, 6, 239);
+}
+.clear{
+    text-align: right;
+}
+.clear button{
+    background-color: rgb(255, 106, 0);
+    color: white;
+    padding: 10px;
+    font-weight: bold;
+    font-size: medium;
+    width: 10%;
 }
