--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,11 @@
 
 body{
     display: flex;
+    align-items: center;
     background-color: rgb(0, 0, 0);
     flex-direction: column;
     height: 100vh;
     padding: 10px;
-    
 }
 .options{
     border: medium solid black;
@@ -20,7 +20,8 @@ body{
     padding: 10px;
     background-color:  rgba(17, 1, 28, 0.8);
     color: white;
-    box-shadow: -5px 10px 8px rgb(42, 33, 33);
+    box-shadow: 0px 0px 8px rgb(163, 4, 255);
+    width: 98%;
 }
 .options div{
     padding: 10px;
@@ -32,6 +33,7 @@ body{
     display: flex;
     margin-bottom: 10px;
     gap: 10px;
+    
 }
 .user-grid input{
     flex: 1;
@@ -52,7 +54,10 @@ body{
     display: flex;
     flex-direction: column;
     flex:4;
-    box-shadow: -5px 10px 8px rgb(42, 33, 33);
+
+    box-shadow: 0px 0px 8px rgb(163, 4, 255);
+    width: 60%;
+    height: auto;
     /* padding: 10px; */
     /* background-color: white; */
     /* border: medium solid black; */
@@ -66,6 +71,7 @@ body{
     background-color: rgba(17, 1, 28, 0.8);
     flex: 1;
     transition: ease 0.3s all;
+    
 }
 
 .marked{
